Fixed popup overlay and z-index issue

--- a/front_end/style.css
+++ b/front_end/style.css
@@ -311,16 +311,29 @@ footer{
 /* POPUP */
 
 .popup{
+
   position:fixed;
+
   top:0;
+
   left:0;
+
   width:100%;
+
   height:100vh;
-  background:rgba(0,0,0,0.7);
+
+  background:rgba(0,0,0,0.92);
+
+  backdrop-filter:blur(8px);
+
+  z-index:99999;
 
   display:none;
+
   justify-content:center;
+
   align-items:center;
+
 }
 
 .popup-content{
